--- a/level1_design1/Makefile
+++ b/level1_design1/Makefile
@@ -1,15 +1,9 @@
 # See LICENSE.vyoma for details
-
 TOPLEVEL_LANG ?= verilog
-
 PWD=$(shell pwd)
-
 VERILOG_SOURCES = $(PWD)/mux.v
-
-TOPLEVEL := mux          # design
-MODULE   := test_mux     # test
-
+TOPLEVEL := mux
+MODULE   := test_mux
 include $(shell cocotb-config --makefiles)/Makefile.sim
-
 clean_all: clean
 	rm -rf *.xml sim_build __pycache__
